--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -22,14 +22,16 @@ font-size: 11px;
 }
 
 .imageContainer img {
-    width:85px;
-    height:85px;
+    width:100px;
+    height:100px;
     border-radius:50px;
 }
 
 .infoContainer h1 {
     font-size:20px;
+    line-height: 1;
     font-family: 'Noto Sans Mono', monospace;
+    margin-bottom:0;
 }
 
 .infoContainer h2 {
@@ -42,6 +44,7 @@ font-size: 11px;
     font-family: 'Noto Sans Mono', monospace;
     font-size:14px;
     font-weight:500;
+    margin-top:0;
 }
 
 .middleSection {
