--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -25,6 +25,7 @@
 }
 
 .search button {
+    cursor:pointer;
     background-color: var(--color-light-blue);
     color: var(--color-white);
     border:none;
