--- a/src/App.css
+++ b/src/App.css
@@ -3,3 +3,13 @@
   margin: 0 auto;
   color: var(--color-white);
 }
+
+.error {
+  text-align: center;
+  background-color: var(--color-dark-blue);
+  padding: 1rem;
+  margin-top: 3rem ;
+  border-radius: 20px;
+  font-size: 1.5rem;
+  font-family: 'Noto Sans Mono', monospace;
+}
