--- a/src/App.css
+++ b/src/App.css
@@ -8,8 +8,9 @@
   text-align: center;
   background-color: var(--color-dark-blue);
   padding: 1rem;
-  margin-top: 3rem ;
+  margin: 1.5rem auto 0;
   border-radius: 20px;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
+  width:70%;
   font-family: 'Noto Sans Mono', monospace;
 }
