--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -32,6 +32,11 @@
     padding: 1rem;
     border-radius: 10px;
     font-weight:bold;
+    transition: transform .2s ease;
+}
+
+.search button:active {
+    transform: scale(1.07);
 }
 
 .search i {
