--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--color-darker-blue);
+  /* prevent the blue highlighting when pressing an element */
+  -webkit-tap-highlight-color: transparent; 
 }
 
 code {
