--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -1,6 +1,6 @@
 .card {
     background-color: var(--color-dark-blue);
-    margin:1rem 0 2rem;
+    margin:1rem auto 2rem;
     padding:1.5rem 1rem ;
     border-radius:20px;
 }
@@ -82,10 +82,13 @@ font-size: 11px;
     padding: 0 .3rem;
 }
 
-.bottomContainer p {
+.bottomContainer p,
+.bottomContainer a {
     margin:0.5rem 0;
     font-family: 'Noto Sans Mono', monospace;
     font-size:12px;
+    text-decoration: none;
+    color: var(--color-white);
 }
 
 .bottomContainer i {
@@ -99,3 +102,29 @@ font-size: 11px;
     align-items: center;
     gap:1rem;
 }
+
+#light .card{
+    background-color: var(--color-off-white);
+}
+
+#light .reposAndFollowers {
+    background-color: rgb(90,90,90);
+}
+
+#light .card p,
+#light .bottomContainer a,
+#light .card h1,
+#light .card i{
+    color: var(--color-dark-grey);
+}
+
+#light .tableSection p  {
+    color: var(--color-white);
+}
+
+#light .card h2 {
+    color: rgb(255, 170, 42);
+    font-weight:bold;
+}
+
+
