--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,26 @@
 
 body {
   margin: 0;
+  width:100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: var(--color-darker-blue);
   /* prevent the blue highlighting when pressing an element */
   -webkit-tap-highlight-color: transparent; 
+}
+
+body:has(#dark) { /* apply on 'body' if it has an element with id #dark */
+  background-color: var(--color-darker-blue);
+}
+
+body:has(#light) { /* apply on 'body' if it has an element with id #light */
+  background-color: var(--color-white);
+}
+
+* {
+  transition: background-color .5s ease;
 }
 
 code {
@@ -21,7 +33,9 @@ code {
   --color-dark-blue: #1f2a48;
   --color-darker-blue: #141c2f;
   --color-light-blue: #3165f5;
-  --color-white: rgb(230,230,230);
+  --color-white: rgb(240,240,240);
+  --color-off-white: rgb(200,200,200);
+  --color-dark-grey: rgb(110,110,110);
 }
 
 .fade-in {
