--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,7 @@ code {
   --color-light-blue: #3165f5;
   --color-white: rgb(240,240,240);
   --color-off-white: rgb(200,200,200);
+  --color-light-grey: rgb(170,170,170);
   --color-dark-grey: rgb(110,110,110);
 }
 
