--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -32,7 +32,7 @@
     padding: 1rem;
     border-radius: 10px;
     font-weight:bold;
-    transition: transform .2s ease;
+    transition: all .2s ease;
 }
 
 .search button:active {
@@ -42,6 +42,7 @@
 .search i {
     font-size:1.7rem;
     color:var(--color-light-blue);
+    transition: .2s ease;
 }
 
 #light .search {
@@ -59,4 +60,23 @@
 
 #light .search i {
     color: rgb(255, 170, 42);
+}
+
+@media screen and (min-width:768px) and (max-width:1023px) {
+    .search {
+    justify-content:flex-start;
+    position: relative;
+    gap:1rem;
+    padding:1rem 1.5rem;
+    }
+
+    .search button {
+        position: absolute;
+        right: 2%;
+        padding: .9rem 1.2rem;
+    }
+
+    .search input {
+    font-size: 14px;
+    }
 }
