--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -13,12 +13,15 @@
     margin-left:.3rem;
     font-weight:600;
 }
+.header .themeSwitch {
+    cursor:pointer;
+}
 
 #light .header {
     color: var(--color-dark-grey);
 } 
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width:768px) {
     .header {
         margin:4rem auto 1rem;
     }
