--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -62,7 +62,7 @@
     color: rgb(255, 170, 42);
 }
 
-@media screen and (min-width:768px) and (max-width:1023px) {
+@media screen and (min-width:768px) {
     .search {
     justify-content:flex-start;
     position: relative;
@@ -77,6 +77,7 @@
     }
 
     .search input {
-    font-size: 14px;
+        font-size: 14px;
+        width: 75%;
     }
 }
