--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,83 +1,83 @@
 .search {
-    background-color: var(--color-dark-blue);
-    padding: .5rem;
-    display:flex;
-    justify-content:space-around;
-    align-items:center;
-    text-align: center;
-    border-radius: 20px;
+  background-color: var(--color-dark-blue);
+  padding: 0.5rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  text-align: center;
+  border-radius: 20px;
 }
 
 .search input {
-    border:none;
-    background-color:transparent;
-    color: var(--color-white);
-    font-family: 'Noto Sans Mono', monospace;
-    font-size: 12px;
+  border: none;
+  background-color: transparent;
+  color: var(--color-white);
+  font-family: "Noto Sans Mono", monospace;
+  font-size: 12px;
 }
 .search input:focus {
-    border:none;
-    outline:none;
+  border: none;
+  outline: none;
 }
 
 .search input::placeholder {
-    color: var(--color-white);
+  color: var(--color-white);
 }
 
 .search button {
-    cursor:pointer;
-    background-color: var(--color-light-blue);
-    color: var(--color-white);
-    border:none;
-    padding: 1rem;
-    border-radius: 10px;
-    font-weight:bold;
-    transition: all .2s ease;
+  cursor: pointer;
+  background-color: var(--color-light-blue);
+  color: var(--color-white);
+  border: none;
+  padding: 1rem;
+  border-radius: 10px;
+  font-weight: bold;
+  transition: all 0.2s ease;
 }
 
 .search button:active {
-    transform: scale(1.07);
+  transform: scale(1.07);
 }
 
 .search i {
-    font-size:1.7rem;
-    color:var(--color-light-blue);
-    transition: .2s ease;
+  font-size: 1.7rem;
+  color: var(--color-light-blue);
+  transition: 0.2s ease;
 }
 
 #light .search {
-    background-color: var(--color-off-white);
+  background-color: var(--color-off-white);
 }
 
 #light .search input,
 #light .search input::placeholder {
-    color: var(--color-dark-grey);
+  color: var(--color-dark-grey);
 }
 
 #light .search button {
-    background-color: rgb(255, 170, 42);
+  background-color: rgb(255, 170, 42);
 }
 
 #light .search i {
-    color: rgb(255, 170, 42);
+  color: rgb(255, 170, 42);
 }
 
-@media screen and (min-width:768px) {
-    .search {
-    justify-content:flex-start;
+@media screen and (min-width: 768px) {
+  .search {
+    justify-content: flex-start;
     position: relative;
-    gap:1rem;
-    padding:1rem 1.5rem;
-    }
+    gap: 1rem;
+    padding: 1rem 1.5rem;
+  }
 
-    .search button {
-        position: absolute;
-        right: 2%;
-        padding: .9rem 1.2rem;
-    }
+  .search button {
+    position: absolute;
+    right: 2%;
+    padding: 0.9rem 1.2rem;
+  }
 
-    .search input {
-        font-size: 14px;
-        width: 75%;
-    }
+  .search input {
+    font-size: 14px;
+    width: 75%;
+  }
 }
