--- a/src/index.css
+++ b/src/index.css
@@ -1,31 +1,33 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+Mono:wght@400;500&display=swap");
 
 body {
   margin: 0;
-  width:100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  width: 100%;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   /* prevent the blue highlighting when pressing an element */
-  -webkit-tap-highlight-color: transparent; 
+  -webkit-tap-highlight-color: transparent;
 }
 
-body:has(#dark) { /* apply on 'body' if it has an element with id #dark */
+body:has(#dark) {
+  /* apply on 'body' if it has an element with id #dark */
   background-color: var(--color-darker-blue);
 }
 
-body:has(#light) { /* apply on 'body' if it has an element with id #light */
+body:has(#light) {
+  /* apply on 'body' if it has an element with id #light */
   background-color: var(--color-white);
 }
 
 * {
-  transition: background-color .5s ease;
+  transition: background-color 0.5s ease;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -33,15 +35,15 @@ code {
   --color-dark-blue: #1f2a48;
   --color-darker-blue: #141c2f;
   --color-light-blue: #3165f5;
-  --color-white: rgb(240,240,240);
-  --color-off-white: rgb(200,200,200);
-  --color-light-grey: rgb(170,170,170);
-  --color-dark-grey: rgb(110,110,110);
+  --color-white: rgb(240, 240, 240);
+  --color-off-white: rgb(200, 200, 200);
+  --color-light-grey: rgb(170, 170, 170);
+  --color-dark-grey: rgb(110, 110, 110);
 }
 
 .fade-in {
-  -webkit-animation: fade-in .5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
-  animation: fade-in .5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  -webkit-animation: fade-in 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
+  animation: fade-in 0.5s cubic-bezier(0.39, 0.575, 0.565, 1) both;
 }
 
 @-webkit-keyframes fade-in {
