--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -67,13 +67,21 @@
     justify-content: flex-start;
     position: relative;
     gap: 1rem;
-    padding: 1rem 1.5rem;
+    padding: 1.2rem 1.5rem;
   }
 
   .search button {
     position: absolute;
     right: 2%;
     padding: 0.9rem 1.2rem;
+  }
+
+  .search button:hover {
+    transform: scale(1.03)
+  }
+
+  .search button:active {
+    transform: scale(1.07)
   }
 
   .search input {
