--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -15,6 +15,7 @@
   font-family: "Noto Sans Mono", monospace;
   font-size: 12px;
   width:100%;
+  padding-left: .5rem;
 }
 .search input:focus {
   border: none;
