--- a/src/components/Repo/Repo.css
+++ b/src/components/Repo/Repo.css
@@ -44,9 +44,9 @@
     font-weight: 500;
     text-align: center;
     display: block;
-    width:30%;
+    width:5rem;
     margin: 0 auto;
-    transition: all .3s ease-in-out;
+    transition: all .3s ease;
 }
 
 .repo a:hover {
@@ -106,7 +106,7 @@
 
 #light .repo .container p,
 #light .repo .container a {
-    color: var(--color-off-white);
+    color: var(--color-white);
 }
 
 #light .repo .description {
@@ -116,3 +116,31 @@
 #light .repo .name {
     color: rgb(85,85,85);
 }
+
+
+@media screen and (min-width: 768px) {
+    .repo {
+        padding: 2rem  2rem 1.5rem;
+    }
+
+    .repo .container {
+        width: 65%;
+        margin: .7rem auto;
+    }
+
+    .repo a {
+        width:7rem;
+    }
+} 
+
+@media screen and (min-width: 1024px) {
+    .repo {
+        padding: 2.5rem 3.5rem 2rem ;
+        margin: 1rem 0;
+    }
+
+    .repo .container {
+        width: 60%;
+        margin: .5rem auto 1.2rem;
+    }
+} 
