--- a/src/components/ReposContainer/ReposContainer.css
+++ b/src/components/ReposContainer/ReposContainer.css
@@ -1,17 +1,17 @@
 .reposContainer {
-    background-color: var(--color-dark-blue);
-    padding: 1.5rem 1rem;
-    border-radius: 20px;
-    position: relative;
+  background-color: var(--color-dark-blue);
+  padding: 1.5rem 1rem;
+  border-radius: 20px;
+  position: relative;
 }
 
 .reposContainer h1 {
-    margin:0 0 1rem;
-    padding: 0 .5rem .75rem;
-    font-size: 22px;
-    line-height: 1;
-    font-family: "Noto Sans Mono", monospace;
-    color: var(--color-off-white);
+  margin: 0 0 1rem;
+  padding: 0 0.5rem 0.75rem;
+  font-size: 22px;
+  line-height: 1;
+  font-family: "Noto Sans Mono", monospace;
+  color: var(--color-white);
 }
 
 #light .reposContainer {
@@ -23,17 +23,17 @@
 }
 
 @media screen and (min-width: 768px) {
-    .reposContainer {
-        padding: 2.5rem;
-    }
-} 
+  .reposContainer {
+    padding: 2.5rem;
+  }
+}
 
 @media screen and (min-width: 1024px) {
-    .reposContainer {
-        padding: 3rem 3rem 1rem;
-    }
+  .reposContainer {
+    padding: 3rem 3rem 1rem;
+  }
 
-    .reposContainer h1 {
+  .reposContainer h1 {
     font-size: 24px;
+  }
 }
-} 
