--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -23,38 +23,38 @@
 }
 
 .imageContainer {
-  width:100px;
-  display:flex;
-  flex-direction:column;
+  width: 100px;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  text-align:center;
+  text-align: center;
 }
 
 .imageContainer img {
   width: 100px;
   height: 100px;
   border-radius: 50px;
-  margin-bottom:.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .imageContainer a {
-  color:var(--color-offWhite);
-  background-color: var(--color-darker-blue); 
-  text-decoration:none;
+  color: var(--color-offWhite);
+  background-color: var(--color-darker-blue);
+  text-decoration: none;
   font-size: 12px;
-  font-weight:600;
-  padding: .5rem;
+  font-weight: 600;
+  padding: 0.5rem;
   border-radius: 8px;
-  transition: all .3s ease;
+  transition: all 0.3s ease;
 }
 
 .imageContainer a:hover {
-  background-color: var(--color-light-blue); 
-  transform: scale(1.02)
+  background-color: var(--color-light-blue);
+  transform: scale(1.02);
 }
 
 .imageContainer a:active {
-  transform: scale(1.05)
+  transform: scale(1.05);
 }
 
 .infoContainer h1 {
@@ -167,11 +167,11 @@
 }
 
 #light .imageContainer a:hover {
-  background-color: rgb(230, 154, 42);
+  background-color: var(--color-orange);
 }
 
 #light .card h2 {
-  color: rgb(230, 154, 42);
+  color: var(--color-orange);
   font-weight: bold;
 }
 
@@ -189,7 +189,7 @@
   }
 
   .imageContainer a {
-    font-size:.7rem;
+    font-size: 0.7rem;
   }
 
   .imageContainer img {
@@ -217,13 +217,13 @@
 
   .topSection {
     gap: 3rem;
-    align-items:flex-start;
+    align-items: flex-start;
   }
 
   .infoContainer {
-    margin-top:1rem;
+    margin-top: 1rem;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
   }
 
   .imageContainer {
@@ -231,7 +231,7 @@
   }
 
   .imageContainer a {
-    font-size:.85rem;
+    font-size: 0.85rem;
   }
 
   .imageContainer img {
